--- a/css/base/common.css
+++ b/css/base/common.css
@@ -1,3 +1,7 @@
+* {
+    outline: none;
+}
+
 h1, h2, h3, h4, h5, h6, p {
     margin-top: 0;
     margin-bottom: 0;
@@ -17,16 +21,69 @@ img {
     list-style-type: none;
 }
 
-.link {
+.link,
+.link:hover {
     text-decoration: none;
 }
 
 button { 
     cursor: pointer;
+    outline: none;
+    border: none;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
     color: #434455;
-    background: #FFFFFF;
+    background-color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+body, html {
+    min-height: 100%;
+    position: relative;
+    overflow-x: hidden;
+}
+
+.section {
+    padding: 96px 0;
+}
+
+.no-scroll {
+    overflow: hidden;
+}
+
+.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
+
+.button-item {
+    margin-bottom: 15px;
+}
+
+.button-item:not(:last-child) {
+    margin-right: 8px;
+}
+
+@media screen and (min-width: 768px) {
+    .button-item {
+        margin-bottom: 0;
+    }
+}
+
+input::placeholder {
+    color: #fff;
+}
+
+textarea::placeholder {
+    color: #8E8F99;
+}
+
+@media screen and (min-width: 1160px) {
+    .section {
+        padding: 120px 0;
+    }
 }
