--- a/css/base/container.css
+++ b/css/base/container.css
@@ -1,32 +1,19 @@
 .container {
+    width: 100%;
     padding-left: 16px;
     padding-right: 16px;
-}
-
-@media screen and (min-width: 320px) {
-    .container {
-        width: 320px;
-        margin-left: auto;
-        margin-right: auto;
-    }
+    margin: 0 auto;
+    max-width: 320px;
 }
 
 @media screen and (min-width: 768px) {
     .container {
-        width: 736px;
+        max-width: 768px;
     }
 }
 
-@media screen and (min-width: 1158px) {
+@media screen and (min-width: 1160px) {
     .container {
-        width: 1158px;
-        padding: 0 15px;
+        max-width: 1160px;
     }
 }
-
-/* .container {
-    width: 1158px;
-    margin: 0 auto;
-    padding: 0 15px;
-} */
-
